--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,6 +13,7 @@
 
   --fuentePrincipal: "Roboto", sans-serif;
   --fuenteSecundari: "Lato", sans-serif;
+  --fuentePrecio: "Raleway", sans-serif;
 }
 
 html {
@@ -26,6 +27,7 @@ html {
 }
 
 body {
+  /* overflow: hidden; */
   height: 100vh;
   background-color: var(--negro);
   font-family: var(--fuentePrincipal);
@@ -44,7 +46,9 @@ img {
 }
 
 .container {
+  /* overflow: hidden; */
   height: 100%;
+  /* margin-left: 5rem; */
 }
 /* .logo-shake {
   height: 12%;
@@ -62,19 +66,21 @@ img {
   padding-left: 5rem;
 }
 .title-product-advertising h2{
+  margin: 9rem 0;
   color: var(--blanco);
   font-size: 15rem;
 }
  .products-shake {
   display: grid;
   grid-template-columns: repeat(2, minmax(10rem, 1fr));
-  grid-gap: 2rem;
+  grid-gap: 4rem;
   margin: 0 5rem;
 }
 
 .card-product {
   background-color: var(--blanco);
   border-radius: 1rem;
+  border: 2px solid rgba(7, 7, 7, 0.12);
   display: flex;
   flex-direction: row;
   overflow: hidden;
@@ -97,79 +103,82 @@ img {
   padding: 0 2rem;
 }
 .div-product-text h3 {
+  margin: 2rem 0;
   font-family: var(--fuenteSecundari);
-  font-size: 2.5rem;
+  font-size: 7rem;
 }
 .div-product-text .div-description p {
+  margin:0;
   font-family: var(--fuentePrincipal);
+  font-size: 4rem;
+
 }
 
 .div-product-text .div-price p {
   text-align: center;
   background-color: var(--primario);
   border-radius: 1rem;
-  font-family: "Raleway", sans-serif;
-  font-size: 2.8rem;
+  font-family: var(--fuentePrecio);
+  font-size: 6rem;
   font-weight: 600;
-  max-width: 40%;
+  max-width: 50%;
 }
 
 /* Productos populares */
 .div-product-recommendation{
+  width: 100%;
   height: 20%;
 }
-.title-product-recommendation h2 {
-  color: var(--blanco);
-  font-size: 13rem;
-  /* font-size: 6rem; */
+.title-product-recommendation{
   padding-left: 5rem;
-
+}
+.title-product-recommendation h2{
+  color: white;
+  font-size: 13rem;
+  margin: 0;
 }
 
-.div-card-recommendation{
-width: 100%;
-height: 100%;
-overflow: hidden;
+.card-recommendation{
+  height: auto;
+  /* background-color: var(--blanco); */
+  border-radius: 2rem;
+  overflow: hidden;
 }
-
-.div-card-recommendation ul{
+.img-text-recomendation{
+  height: 50%;
   display: flex;
-  animation: cambio 20s infinite
-  alternate linear;
-  width: 400%;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
-.div-card-recommendation li{
-  width: 100%;
-  list-style: none;
+.img-recommendation{
+  width: 28rem;
+  height: 28rem;
+  border-radius: 50%;
+  padding: .3rem;
+  overflow: hidden;
 }
-.div-card-recommendation img{
-  width: 100%;
+.img-recommendation img{
+  width:100%;
   height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.price-recommendation p{
+  color: #e1e1e1;
+  font-family: var(--fuentePrecio);
+  font-size: 7rem;
+  font-weight: 800;
 }
 
-@keyframes cambio{
-  0%{ margin-left: 0%;}
-  20%{ margin-left: 0%;}
-
-  25%{ margin-left:-100%}
-  45%{margin-left: -100%;}
-
-  50%{margin-left: -200%;}
-  70%{margin-left: -200%;}
-
-  75%{margin-left: -300%;}
-  100%{margin-left: -300%;}
-
-
-
+.desc-recomendation p{
+  color: #e1e1e1;
+  margin: 0;
+  text-align: center;
+  font-family: var(--fuenteSecundari);
+  font-size: 6rem;
+  font-weight: 700;
 }
-/* .card-recommendation{
-    height: auto;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-} */
 
 
 /* Order list y sugerencias */
