--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,7 +7,7 @@
   --gris: #3b3b3b;
   --blanco: #ffff;
   --negro: #1f1e1e;
-  --grisClaro: #e1e1e1;
+  --grisClaro: #f7faff;
 
   --separacion: 5rem;
 
@@ -55,154 +55,6 @@ img {
   width: 80%;
   margin: 0 auto;
 } */
-/* Publicidad del producto */
-.div-product-advertising {
-  height: 45%;
-  display: flex;
-  flex-direction: column;
-}
-
-.title-product-advertising{
-  padding-left: 5rem;
-}
-.title-product-advertising h2{
-  margin: 9rem 0;
-  color: var(--blanco);
-  font-size: 15rem;
-}
- .products-shake {
-  display: grid;
-  grid-template-columns: repeat(2, minmax(10rem, 1fr));
-  grid-gap: 4rem;
-  margin: 0 5rem;
-}
-
-.card-product {
-  background-color: var(--blanco);
-  border-radius: 1rem;
-  border: 2px solid rgba(7, 7, 7, 0.12);
-  display: flex;
-  flex-direction: row;
-  overflow: hidden;
-}
-
-.div-product-img {
-  overflow: hidden;
-  width: 50%;
-}
-
-.div-product-img img {
-  object-fit: cover;
-  height: 100%;
-}
-
-.div-product-text {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  padding: 0 2rem;
-}
-.div-product-text h3 {
-  margin: 2rem 0;
-  font-family: var(--fuenteSecundari);
-  font-size: 7rem;
-}
-.div-product-text .div-description p {
-  margin:0;
-  font-family: var(--fuentePrincipal);
-  font-size: 4rem;
-
-}
-
-.div-product-text .div-price p {
-  text-align: center;
-  background-color: var(--primario);
-  border-radius: 1rem;
-  font-family: var(--fuentePrecio);
-  font-size: 6rem;
-  font-weight: 600;
-  max-width: 50%;
-}
-
-/* Productos populares */
-.div-product-recommendation{
-  width: 100%;
-  height: 20%;
-}
-.title-product-recommendation{
-  padding-left: 5rem;
-}
-.title-product-recommendation h2{
-  color: white;
-  font-size: 13rem;
-  margin: 0;
-}
-/* Opcional */
-.swiper-wrapper{
-  width: 45%;
-}
-
-.card-recommendation{
-  height: auto;
-  /* background-color: var(--blanco); */
-  border-radius: 2rem;
-  overflow: hidden;
-}
-.img-text-recomendation{
-  height: 50%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-.img-recommendation{
-  position: relative;
-  z-index: 2;
-  left: 4rem;
-  width: 28rem;
-  height: 28rem;
-  border-radius: 50%;
-  padding: .3rem;
-  overflow: hidden;
-}
-.img-recommendation img{
-  width:100%;
-  height: 100%;
-  border-radius: 50%;
-  object-fit: cover;
-}
-
-.price-recommendation{
-  z-index: 1;
-  background-color: #5e9e40;
-  width: 28rem;
-  height: 28rem;
-  border-radius: 50%;
-  padding: .3rem;
-  overflow: hidden;
-  padding-right: 1.5rem;
-}
-.price-recommendation p{
-  width:100%;
-  height: 100%;
-  color: var(--blanco);
-  font-family: var(--fuentePrecio);
-  font-size: 7rem;
-  font-weight: 800;
-  text-align:end;
-}
-
-.desc-recomendation p{
-  color: var(--blanco);
-  margin: 0;
-  text-align: center;
-  font-family: var(--fuenteSecundari);
-  font-size: 6rem;
-  font-weight: 700;
-}
 
 
-/* Order list y sugerencias */
-.div-orders-suggestion{
-  height: 35%;
-}
+
