--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -56,5 +56,17 @@ img {
   margin: 0 auto;
 } */
 
+/* modal */
 
-
+.modal-publicidad{
+  background-color: #f7faff;
+  height: 100%;
+  position: fixed;
+  width: 100%;
+  z-index: 3;
+}
+.modal-publicidad img{
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
