Se egregan los componentes de las listas, y una funcion para calcular el total de los pedidos. cantidad por precio

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -50,8 +50,10 @@ img {
 .container {
   height: 100%;
 }
-.ocultar{
-  /* display: none; */
+.ocultar-advertising{
   opacity: 0;
+}
+.ocultar-order-list{
+  /* opacity: 0; */
 }
 
