--- a/public/css/principal/advertising.css
+++ b/public/css/principal/advertising.css
@@ -22,6 +22,8 @@
   }
   
   .card-product {
+    height: 100%;
+    max-height:40rem;
     background-color: var(--blanco);
     border-radius: 2.5rem;
     border: 2px solid rgba(7, 7, 7, 0.12);
@@ -49,7 +51,7 @@
   .div-product-text h3 {
     margin: 2rem 0;
     font-family: var(--fuenteSecundari);
-    font-size: 7rem;
+    font-size: 6.5rem;
   }
   .div-product-text .div-description p {
     margin:0;
@@ -67,5 +69,6 @@
     font-weight: 600;
     max-width: 50%;
     text-align: center;
+    margin: 0;
   }
   
