--- a/public/css/principal/carousel.css
+++ b/public/css/principal/carousel.css
@@ -55,7 +55,9 @@
     border-radius: 50%;
     padding: .3rem;
     overflow: hidden;
-    padding-right: 1.5rem;
+    padding-right: 2.5rem;
+    padding-left: 2.5rem;
+    padding-top: 5rem;
   }
   .price-recommendation p{
     width:100%;
@@ -76,4 +78,4 @@
     font-size: 6rem;
     font-weight: 700;
   }
-  
+ 
