--- a/public/css/modals/modal-order-correct.css
+++ b/public/css/modals/modal-order-correct.css
@@ -15,14 +15,15 @@
   justify-content: space-between;
   }
   .text-order-correct{
-    width: 50%;
+    width: 45%;
+    padding-left: 2rem;
   }
   .text-order-correct h2{
   color: var(--blanco);
-    font-size: 12rem;
+    font-size: 6rem;
     font-family: var(--fuenteSecundari);
     font-weight: 700;
-    margin: 10rem;
+    /* margin: 2rem; */
   }
   .logo-order-correct{
     width: 50%;
@@ -35,7 +36,7 @@
   
   .content-order-correct{
     height: 45%;
-    padding-top: 10rem;
+    padding-top: 1rem;
   }
   
   .content-order-correct ul li{
@@ -46,7 +47,8 @@
   .ulList-orders-correct{
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: .2rem;
+    padding: 0;
   } 
 
   .ulList-orders-correct li{
@@ -64,10 +66,11 @@
     border-top-right-radius: 3rem; /* Ajusta el valor según tus preferencias */
     border-bottom-right-radius: 3rem; 
     width: 10%;
+    padding-left: 3rem;
   }
   .ulList-orders-li-correct .order-amount-correct h2{
     color: var(--blanco);
-    font-size: 10rem;
+    font-size: 5rem;
     margin: 0;
     text-align: end;
     padding-right: 8rem;
@@ -75,7 +78,7 @@
 
   .ulList-orders-li-correct .order-type-correct h3{
     font-family: var(--fuenteSecundaria);
-    font-size: 10rem;
+    font-size: 5rem;
     font-weight: 400;
     margin: 0;
   }
@@ -88,7 +91,7 @@
   }
   .ulList-orders-li-correct .order-price-correct p, span{
     font-family: var(--fuentePrecio);
-    font-size: 10rem;
+    font-size: 5rem;
     font-weight: 700;
     margin: 0;
 
@@ -97,7 +100,7 @@
   .footer-order-correct{
     background-color: var(--negro);
     height: 40%;
-    padding: 10rem 0;
+    padding: 5rem 0;
   }
   
   .footer-order-total{
@@ -108,27 +111,27 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: 5rem 5rem;
+    margin: 1rem 1rem;
     padding: 0 5rem;
   }
   
   .footer-order-total h2{
     color: var(--blanco);
-    font-size: 10rem;
+    font-size: 5rem;
     font-family: var(--fuenteSecundari);
     font-weight: 700;
   }
   
   .footer-order-total p{
     color: var(--blanco);
-    font-size: 10rem;
+    font-size: 5rem;
     font-family: var(--fuentePrecio);
     font-weight: 700;
   }
   
   .footer-order-title-one h2{
     color: var(--blanco);
-    font-size: 12rem;
+    font-size: 5rem;
     text-align: center;
     margin: 0;
     margin-top: 15rem;
@@ -138,12 +141,12 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 5rem;
+    gap: 1rem;
   }
   
   .footer-order-title-two h3{
     color: var(--blanco);
-    font-size: 10rem;
+    font-size: 5rem;
     margin: 0;
     text-align: center;
   }
