--- a/public/css/principal/order-list.css
+++ b/public/css/principal/order-list.css
@@ -16,7 +16,7 @@
   .title-order-list{
     background-color: var(--blanco);
     padding: 1rem 0;
-    padding-left: 5rem;
+    padding-left: 2rem;
     position: sticky;
     top: 0rem;
     width: 100%;
@@ -25,16 +25,17 @@
 
   .title-order-list h2{
     color: var(--negro);
-    font-size: 10rem;
-    margin: 4rem 0;
+    font-size: 5rem;
+    margin: 1rem 0;
   }
 
   .ul-order-list{z-index: 1;}
 
   .ulList-orders{
+    padding: 0;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 1rem;
   } 
 
   .ulList-orders li{
@@ -49,21 +50,21 @@
 
   .ulList-orders-li .order-amount{
     background-color: var(--primario);
-    border-top-right-radius: 3rem; /* Ajusta el valor según tus preferencias */
-    border-bottom-right-radius: 3rem; 
+    border-top-right-radius: 1.5rem; /* Ajusta el valor según tus preferencias */
+    border-bottom-right-radius: 1.5rem; 
     width: 10%;
   }
   .ulList-orders-li .order-amount h2{
     color: var(--blanco);
-    font-size: 10rem;
+    font-size: 5rem;
     margin: 0;
     text-align: end;
-    padding-right: 8rem;
+    padding-right: 4.5rem;
   }
 
   .ulList-orders-li .order-type h3{
     font-family: var(--fuenteSecundaria);
-    font-size: 10rem;
+    font-size: 4rem;
     font-weight: 400;
     margin: 0;
   }
@@ -72,11 +73,11 @@
     flex-direction: row;
     justify-content: start;
     align-items: center;
-    width: 15%;
+    width: 20%;
   }
   .ulList-orders-li .order-price p, span{
     font-family: var(--fuentePrecio);
-    font-size: 10rem;
+    font-size: 5rem;
     font-weight: 700;
     margin: 0;
 
@@ -103,10 +104,10 @@
   }
 
 .text-total h2{
-  font-size: 10rem;
+  font-size: 5rem;
   font-family: var(--fuenteSecundaria);
 }
 .amount-total-total h2{
-  font-size: 10rem;
+  font-size: 5rem;
   font-family: var(--fuentePrecio);
 }
