--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -52,10 +52,16 @@ img {
   height: 100%;
 }
 .ocultar-advertising{
+  display: none;
   opacity: 0;
 }
 .ocultar-order-list{
+  display: none;
   opacity: 0;
+}
+
+.show-amount{
+opacity: 1 !important;
 }
 
 .gap-0{
