--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -51,12 +51,13 @@ img {
 .container {
   height: 100%;
 }
-.ocultar-advertising{
+.display-off{
   display: none;
+}
+.ocultar-advertising{
   opacity: 0;
 }
 .ocultar-order-list{
-  display: none;
   opacity: 0;
 }
 
