--- a/public/css/modals/modal-order-correct.css
+++ b/public/css/modals/modal-order-correct.css
@@ -59,43 +59,58 @@
   } 
   .ulList-orders-li-correct{
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;;
+    flex-direction: column;
   }
+/* ***** Extras ***** */
 
-  .ulList-orders-li-correct .order-amount-correct{
+.ulList-orders-li-correct-div{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.ul-order-content-correct{
+  padding-left: 21rem;
+}
+.ul-order-content-correct li{
+  color: var(--gris);
+  font-size: 3rem;
+}
+
+/* ************** */
+
+  .order-amount-correct{
     background-color: var(--primario);
     border-top-right-radius: 1.5rem; /* Ajusta el valor según tus preferencias */
     border-bottom-right-radius: 1.5rem; 
     width: 10%;
     padding-left: 3rem;
   }
-  .ulList-orders-li-correct .order-amount-correct h2{
+  .order-amount-correct h2{
     color: var(--blanco);
     font-size: 5rem;
     margin: 0;
     text-align: end;
     padding-right: 8rem;
   }
-  .ulList-orders-li-correct .order-type-correct{
+ .order-type-correct{
     width: 60%;
   }
-  .ulList-orders-li-correct .order-type-correct h3{
+.order-type-correct h3{
     font-family: var(--fuenteSecundaria);
     font-size: 5rem;
     /* font-weight: 400; */
   font-weight: 600;
     margin: 0;
   }
-  .ulList-orders-li-correct .order-price-correct{
+.order-price-correct{
     display: flex;
     flex-direction: row;
     justify-content: end;
     align-items: center;
     width: 15%;
   }
-  .ulList-orders-li-correct .order-price-correct p, span{
+.order-price-correct p, span{
     font-family: var(--fuentePrecio);
     font-size: 5rem;
     font-weight: 700;
