Se eliminan las propiedades gap por margin, el navegador no soporta gap

--- a/public/css/principal/advertising.css
+++ b/public/css/principal/advertising.css
@@ -18,7 +18,7 @@
     justify-content: center;
   }
   .modal-publicidad-dos img{
-    object-fit:scale-down;
+    /* object-fit:cover; */
     height: 100%;
     width: 100%;
   }
