Agregamos la propiedad scroll a la lista de productos confirmados

--- a/public/css/modals/modal-order-correct.css
+++ b/public/css/modals/modal-order-correct.css
@@ -48,10 +48,12 @@
   }
 
   .ulList-orders-correct{
+    overflow: scroll;
+    height: 80rem;
+    padding: 0;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    padding: 0;
+    /* gap: 2rem; */
   } 
 
   .ulList-orders-correct li{
@@ -60,6 +62,7 @@
   .ulList-orders-li-correct{
     display: flex;
     flex-direction: column;
+    margin: .5rem 0;
   }
 /* ***** Extras ***** */
 
