--- a/public/css/principal/order-list.css
+++ b/public/css/principal/order-list.css
@@ -65,7 +65,7 @@
   padding: 0;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  /* gap: 2rem; */
 }
 
 .ulList-orders li {
@@ -74,6 +74,7 @@
 .ulList-orders-li {
   display: flex;
   flex-direction: column;
+  margin: .5rem 0;
 }
 
 /* ***** Extras ***** */
